Fix menu items spacing
Seriously, WTF?!?

--- a/site/themes/jdi5/css/region--menu.css.less
+++ b/site/themes/jdi5/css/region--menu.css.less
@@ -56,12 +56,6 @@
     margin: 0;
   }
 
-  .main-menu li {
-    display: table;
-    height: 100%;
-    width: auto;
-  }
-
   .main-menu a:link,
   .main-menu a:visited {
     display: table-cell;
